Fix h2 sizing for picker on tablet/phone

--- a/src/style/overrides/_phone.scss
+++ b/src/style/overrides/_phone.scss
@@ -114,7 +114,8 @@
     }
   }
 
-  #scene-news {
+  #scene-news,
+  #scene-picker {
     h2 {
       font-size: 4rem;
     }
