--- a/src/style/overrides/_tablet.scss
+++ b/src/style/overrides/_tablet.scss
@@ -312,7 +312,8 @@
     }
   }
 
-  #scene-news {
+  #scene-news,
+  #scene-picker {
     h2 {
       font-size: 5rem;
       margin-bottom: 15px;
